# LlamaIndex_Demo

./: .env.example  README.md  check_env.py  config.py  main.py  pyproject.toml  quick_test.py  requirements.txt  test_system.py
docs/: TEACHING_PRACTICES_GUIDE.md
examples/: simple_demo.py  teaching_practices_demo.py
src/: __init__.py  enhanced_web_app.py  hybrid_rag_system.py  knowledge_base.py  langchain_document_processor.py  langchain_lesson_generator.py  lesson_generator.py  memory_manager.py  student_data.py  teaching_practices.py  teaching_practices_api.py  web_app.py
tests/: test_teaching_practices.py
